--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Azure
+name: Deploy to Azure App Service
 
 on:
   workflow_run:
@@ -8,18 +8,23 @@ on:
 
 jobs:
   deploy:
+    name: Deploy to Azure Web App
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-      - name: Download artifact
+      - name: Download artifact from build
         uses: actions/download-artifact@v4
         with:
           name: streamlit-app
 
-      - name: Deploy to Azure Web App
+      - name: 'Log in to Azure using service principal'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         with:
-          app-name: YOUR_AZURE_APP_NAME
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          app-name: PETDashboard
           package: .
